zetasql/parser/testdata/grant_and_revoke.test
grant select, update on table foo to 'user@google.com'
--
GrantStatement [0-54]
  Privileges [6-20]
    Privilege [6-12]
      Identifier(`select`) [6-12]
    Privilege [14-20]
      Identifier(`update`) [14-20]
  PathExpression [30-33]
    Identifier(foo) [30-33]
  GranteeList [37-54]
    StringLiteral('user@google.com') [37-54]
--
GRANT `select`, `update` ON TABLE foo TO 'user@google.com'
==

grant alter user on t1 to 'user1'
--
GrantStatement [0-33]
  Privileges [6-16]
    Privilege [6-16]
      Identifier(`alter user`) [6-16]
  PathExpression [20-22]
    Identifier(t1) [20-22]
  GranteeList [26-33]
    StringLiteral('user1') [26-33]
--
GRANT `alter user` ON t1 TO 'user1'
==

grant create on t1 to 'user1'
--
GrantStatement [0-29]
  Privileges [6-12]
    Privilege [6-12]
      Identifier(`create`) [6-12]
  PathExpression [16-18]
    Identifier(t1) [16-18]
  GranteeList [22-29]
    StringLiteral('user1') [22-29]
--
GRANT `create` ON t1 TO 'user1'
==

grant create user on t1 to 'user1'
--
GrantStatement [0-34]
  Privileges [6-17]
    Privilege [6-17]
      Identifier(`create user`) [6-17]
  PathExpression [21-23]
    Identifier(t1) [21-23]
  GranteeList [27-34]
    StringLiteral('user1') [27-34]
--
GRANT `create user` ON t1 TO 'user1'
==

grant create role on t1 to 'user1'
--
GrantStatement [0-34]
  Privileges [6-17]
    Privilege [6-17]
      Identifier(`create role`) [6-17]
  PathExpression [21-23]
    Identifier(t1) [21-23]
  GranteeList [27-34]
    StringLiteral('user1') [27-34]
--
GRANT `create role` ON t1 TO 'user1'
==

grant delete on t1 to 'user1'
--
GrantStatement [0-29]
  Privileges [6-12]
    Privilege [6-12]
      Identifier(delete) [6-12]
  PathExpression [16-18]
    Identifier(t1) [16-18]
  GranteeList [22-29]
    StringLiteral('user1') [22-29]
--
GRANT delete ON t1 TO 'user1'
==

grant deploy on t1 to 'user1'
--
GrantStatement [0-29]
  Privileges [6-12]
    Privilege [6-12]
      Identifier(deploy) [6-12]
  PathExpression [16-18]
    Identifier(t1) [16-18]
  GranteeList [22-29]
    StringLiteral('user1') [22-29]
--
GRANT deploy ON t1 TO 'user1'
==

grant drop on t1 to 'user1'
--
GrantStatement [0-27]
  Privileges [6-10]
    Privilege [6-10]
      Identifier(drop) [6-10]
  PathExpression [14-16]
    Identifier(t1) [14-16]
  GranteeList [20-27]
    StringLiteral('user1') [20-27]
--
GRANT drop ON t1 TO 'user1'
==

grant drop deployment on t1 to 'user1'
--
GrantStatement [0-38]
  Privileges [6-21]
    Privilege [6-21]
      Identifier(`drop deployment`) [6-21]
  PathExpression [25-27]
    Identifier(t1) [25-27]
  GranteeList [31-38]
    StringLiteral('user1') [31-38]
--
GRANT `drop deployment` ON t1 TO 'user1'
==

grant drop user on t1 to 'user1'
--
GrantStatement [0-32]
  Privileges [6-15]
    Privilege [6-15]
      Identifier(`drop user`) [6-15]
  PathExpression [19-21]
    Identifier(t1) [19-21]
  GranteeList [25-32]
    StringLiteral('user1') [25-32]
--
GRANT `drop user` ON t1 TO 'user1'
==

grant drop role on t1 to 'user1'
--
GrantStatement [0-32]
  Privileges [6-15]
    Privilege [6-15]
      Identifier(`drop role`) [6-15]
  PathExpression [19-21]
    Identifier(t1) [19-21]
  GranteeList [25-32]
    StringLiteral('user1') [25-32]
--
GRANT `drop role` ON t1 TO 'user1'
==

grant execute on t1 to 'user1'
--
GrantStatement [0-30]
  Privileges [6-13]
    Privilege [6-13]
      Identifier(execute) [6-13]
  PathExpression [17-19]
    Identifier(t1) [17-19]
  GranteeList [23-30]
    StringLiteral('user1') [23-30]
--
GRANT execute ON t1 TO 'user1'
==

grant grant option on t1 to 'user1'
--
GrantStatement [0-35]
  Privileges [6-18]
    Privilege [6-18]
      Identifier(`grant option`) [6-18]
  PathExpression [22-24]
    Identifier(t1) [22-24]
  GranteeList [28-35]
    StringLiteral('user1') [28-35]
--
GRANT `grant option` ON t1 TO 'user1'
==

grant execute on t1 to 'user1' with grant option
--
GrantStatement [0-48]
  Privileges [6-13]
    Privilege [6-13]
      Identifier(execute) [6-13]
  PathExpression [17-19]
    Identifier(t1) [17-19]
  GranteeList [23-30]
    StringLiteral('user1') [23-30]
--
GRANT execute ON t1 TO 'user1' WITH GRANT OPTION
==

grant index on t1 to 'user1'
--
GrantStatement [0-28]
  Privileges [6-11]
    Privilege [6-11]
      Identifier(`index`) [6-11]
  PathExpression [15-17]
    Identifier(t1) [15-17]
  GranteeList [21-28]
    StringLiteral('user1') [21-28]
--
GRANT `index` ON t1 TO 'user1'
==

grant insert on t1 to 'user1'
--
GrantStatement [0-29]
  Privileges [6-12]
    Privilege [6-12]
      Identifier(insert) [6-12]
  PathExpression [16-18]
    Identifier(t1) [16-18]
  GranteeList [22-29]
    StringLiteral('user1') [22-29]
--
GRANT insert ON t1 TO 'user1'
==

grant select on t1 to 'user1'
--
GrantStatement [0-29]
  Privileges [6-12]
    Privilege [6-12]
      Identifier(`select`) [6-12]
  PathExpression [16-18]
    Identifier(t1) [16-18]
  GranteeList [22-29]
    StringLiteral('user1') [22-29]
--
GRANT `select` ON t1 TO 'user1'
==

grant show databases on t1 to 'user1'
--
GrantStatement [0-37]
  Privileges [6-20]
    Privilege [6-20]
      Identifier(`show databases`) [6-20]
  PathExpression [24-26]
    Identifier(t1) [24-26]
  GranteeList [30-37]
    StringLiteral('user1') [30-37]
--
GRANT `show databases` ON t1 TO 'user1'
==

grant create user, drop user on t1 to 'user1'
--
GrantStatement [0-45]
  Privileges [6-28]
    Privilege [6-17]
      Identifier(`create user`) [6-17]
    Privilege [19-28]
      Identifier(`drop user`) [19-28]
  PathExpression [32-34]
    Identifier(t1) [32-34]
  GranteeList [38-45]
    StringLiteral('user1') [38-45]
--
GRANT `create user`, `drop user` ON t1 TO 'user1'
==

grant select, delete on table foo to 'user@google.com'
--
GrantStatement [0-54]
  Privileges [6-20]
    Privilege [6-12]
      Identifier(`select`) [6-12]
    Privilege [14-20]
      Identifier(delete) [14-20]
  PathExpression [30-33]
    Identifier(foo) [30-33]
  GranteeList [37-54]
    StringLiteral('user@google.com') [37-54]
--
GRANT `select`, delete ON TABLE foo TO 'user@google.com'
==

grant select, delete on db1.t1 to 'user@google.com'
--
GrantStatement [0-51]
  Privileges [6-20]
    Privilege [6-12]
      Identifier(`select`) [6-12]
    Privilege [14-20]
      Identifier(delete) [14-20]
  PathExpression [24-30]
    Identifier(db1) [24-27]
    Identifier(t1) [28-30]
  GranteeList [34-51]
    StringLiteral('user@google.com') [34-51]
--
GRANT `select`, delete ON db1.t1 TO 'user@google.com'
==

grant select, create on table foo to 'user@google.com'
--
GrantStatement [0-54]
  Privileges [6-20]
    Privilege [6-12]
      Identifier(`select`) [6-12]
    Privilege [14-20]
      Identifier(`create`) [14-20]
  PathExpression [30-33]
    Identifier(foo) [30-33]
  GranteeList [37-54]
    StringLiteral('user@google.com') [37-54]
--
GRANT `select`, `create` ON TABLE foo TO 'user@google.com'
==

grant select, create user on t1 to 'user1'
--
GrantStatement [0-42]
  Privileges [6-25]
    Privilege [6-12]
      Identifier(`select`) [6-12]
    Privilege [14-25]
      Identifier(`create user`) [14-25]
  PathExpression [29-31]
    Identifier(t1) [29-31]
  GranteeList [35-42]
    StringLiteral('user1') [35-42]
--
GRANT `select`, `create user` ON t1 TO 'user1'
==

grant all privileges on view foo to @user1, @@user2, 'mdbuser/bar1', 'mdbuser/bar2'
--
GrantStatement [0-83]
  Privileges [6-20]
  PathExpression [29-32]
    Identifier(foo) [29-32]
  GranteeList [36-83]
    ParameterExpr [36-42]
      Identifier(user1) [37-42]
    SystemVariableExpr [44-51]
      PathExpression [46-51]
        Identifier(user2) [46-51]
    StringLiteral('mdbuser/bar1') [53-67]
    StringLiteral('mdbuser/bar2') [69-83]
--
GRANT ALL PRIVILEGES ON VIEW foo TO @user1, @@user2, 'mdbuser/bar1', 'mdbuser/bar2'
==

grant all on datascape.foo to 'bar'
--
GrantStatement [0-35]
  Privileges [6-9]
  PathExpression [13-26]
    Identifier(datascape) [13-22]
    Identifier(foo) [23-26]
  GranteeList [30-35]
    StringLiteral('bar') [30-35]
--
GRANT ALL PRIVILEGES ON datascape.foo TO 'bar'
==

grant select, insert(col1, col2, col3), update(col2) on foo to 'mdbgroup/bar'
--
GrantStatement [0-77]
  Privileges [6-52]
    Privilege [6-12]
      Identifier(`select`) [6-12]
    Privilege [14-38]
      Identifier(insert) [14-20]
      ColumnList [20-38]
        Identifier(col1) [21-25]
        Identifier(col2) [27-31]
        Identifier(col3) [33-37]
    Privilege [40-52]
      Identifier(`update`) [40-46]
      ColumnList [46-52]
        Identifier(col2) [47-51]
  PathExpression [56-59]
    Identifier(foo) [56-59]
  GranteeList [63-77]
    StringLiteral('mdbgroup/bar') [63-77]
--
GRANT `select`, insert(col1, col2, col3), `update`(col2) ON foo TO 'mdbgroup/bar'
==

grant execute on script datascape.script_foo to 'group@google.com'
--
ERROR: Syntax error: Expected "." or keyword TO but got identifier "datascape" [at 1:25]
grant execute on script datascape.script_foo to 'group@google.com'
                        ^
==

grant on foo to 'bar'
--
ERROR: Syntax error: Unexpected keyword ON [at 1:7]
grant on foo to 'bar'
      ^
==

grant all on to 'bar'
--
ERROR: Syntax error: Unexpected keyword TO [at 1:14]
grant all on to 'bar'
             ^
==

grant all on foo to bar
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got identifier "bar" [at 1:21]
grant all on foo to bar
                    ^
==

grant all on foo
--
ERROR: Syntax error: Expected "." or keyword TO but got end of statement [at 1:17]
grant all on foo
                ^
==

grant all on foo to
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got end of statement [at 1:20]
grant all on foo to
                   ^
==

grant all on foo to 'bar1', bar2
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got identifier "bar2" [at 1:29]
grant all on foo to 'bar1', bar2
                            ^
==

grant all on foo to 'bar1' bar2
--
ERROR: Syntax error: Expected end of input but got identifier "bar2" [at 1:28]
grant all on foo to 'bar1' bar2
                           ^
==

revoke all on foo from 'bar'
--
RevokeStatement [0-28]
  Privileges [7-10]
  PathExpression [14-17]
    Identifier(foo) [14-17]
  GranteeList [23-28]
    StringLiteral('bar') [23-28]
--
REVOKE ALL PRIVILEGES ON foo FROM 'bar'
==

revoke select, grant option on foo from 'bar'
--
RevokeStatement [0-45]
  Privileges [7-27]
    Privilege [7-13]
      Identifier(`select`) [7-13]
    Privilege [15-27]
      Identifier(`grant option`) [15-27]
  PathExpression [31-34]
    Identifier(foo) [31-34]
  GranteeList [40-45]
    StringLiteral('bar') [40-45]
--
REVOKE `select`, `grant option` ON foo FROM 'bar'
==

revoke delete on table foo from 'mdbuser/bar'
--
RevokeStatement [0-45]
  Privileges [7-13]
    Privilege [7-13]
      Identifier(delete) [7-13]
  PathExpression [23-26]
    Identifier(foo) [23-26]
  GranteeList [32-45]
    StringLiteral('mdbuser/bar') [32-45]
--
REVOKE delete ON TABLE foo FROM 'mdbuser/bar'
==

revoke all on table table from 'mdbuser/user', @user2, 'user3', @@user4;
--
RevokeStatement [0-71]
  Privileges [7-10]
  PathExpression [20-25]
    Identifier(table) [20-25]
  GranteeList [31-71]
    StringLiteral('mdbuser/user') [31-45]
    ParameterExpr [47-53]
      Identifier(user2) [48-53]
    StringLiteral('user3') [55-62]
    SystemVariableExpr [64-71]
      PathExpression [66-71]
        Identifier(user4) [66-71]
--
REVOKE ALL PRIVILEGES ON TABLE table FROM 'mdbuser/user', @user2, 'user3', @@user4
==

revoke delete,update(col2) on view foo from 'mdbgroup/bar'
--
RevokeStatement [0-58]
  Privileges [7-26]
    Privilege [7-13]
      Identifier(delete) [7-13]
    Privilege [14-26]
      Identifier(`update`) [14-20]
      ColumnList [20-26]
        Identifier(col2) [21-25]
  PathExpression [35-38]
    Identifier(foo) [35-38]
  GranteeList [44-58]
    StringLiteral('mdbgroup/bar') [44-58]
--
REVOKE delete, `update`(col2) ON VIEW foo FROM 'mdbgroup/bar'
==

revoke all on view foo to 'mdbgroup/bar'
--
ERROR: Syntax error: Expected "." or keyword FROM but got keyword TO [at 1:24]
revoke all on view foo to 'mdbgroup/bar'
                       ^
==

grant all, select on foo to 'bar'
--
ERROR: Syntax error: Expected keyword ON but got "," [at 1:10]
grant all, select on foo to 'bar'
         ^
==

revoke select, all on foo from 'bar'
--
ERROR: Syntax error: Unexpected keyword ALL [at 1:16]
revoke select, all on foo from 'bar'
               ^
==

grant all(a, b, c) on foo to 'bar'
--
ERROR: Syntax error: Expected keyword ON but got "(" [at 1:10]
grant all(a, b, c) on foo to 'bar'
         ^
==

grant all privileges, select on foo to 'bar'
--
ERROR: Syntax error: Expected keyword ON but got "," [at 1:21]
grant all privileges, select on foo to 'bar'
                    ^
==

grant select, all privileges on foo to 'bar'
--
ERROR: Syntax error: Unexpected keyword ALL [at 1:15]
grant select, all privileges on foo to 'bar'
              ^
